Fixed "Add vote" buttons being visible out of the voting stage.

--- a/client/src/scss/hangout.scss
+++ b/client/src/scss/hangout.scss
@@ -1213,13 +1213,13 @@
     }
 
     #suggestions-container {
+      &.in-voting-stage .suggestion .btn-container button.add-vote-btn {
+        @apply block;
+      }
 
-      &-inner {
+      &>div {
         @apply grid grid-cols-2 md:grid-cols-1 items-start gap-2 mb-3;
 
-        &.in-voting-stage .suggestion .btn-container button.add-vote-btn {
-          @apply block;
-        }
 
         .suggestion {
           @apply grid grid-rows-[auto_0fr] transition-[grid] bg-secondary dark:bg-secondary-dark p-2 pb-0 rounded-sm shadow-simple;
@@ -1321,7 +1321,7 @@
 
               button {
                 &.add-vote-btn {
-                  @apply btn sm:w-full bg-cta dark:bg-cta-dark mr-1 sm:mr-0 sm:mb-1;
+                  @apply btn sm:w-full bg-cta dark:bg-cta-dark mr-1 sm:mr-0 sm:mb-1 hidden;
                 }
 
                 &.view-suggestion-btn {
